[project]
name = "decision-theory-problems"
version = "0.1.0"
description = "Decision Theory Problems"
readme = "README.md"
requires-python = ">=3.10.6"

dependencies = [
    "jupyter>=1.1.1",
    "pyagrum>=1.17.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]


[tool.ruff]
line-length = 88  # Matches Black's default
indent-width = 4  # Matches Black's default

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "D",  # pydocstyle
    "D213",  # docstring starts on the 2nd line
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
]
ignore = [
    "D212",  # Incompatible with D213
]
task-tags = ["TODO", "todo"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
disallow_untyped_defs = false
allow_redefinition = true

[tool.isort]
profile = "black"
src_paths = ["src"]
line_length = 88
order_by_type = true
force_single_line = false
combine_as_imports = true
